mark owo-lib as hard dependency